<resources>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="app_name">SyndiSync</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login2">Login</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="registre">Registre</string>
    <string name="log">Login</string>
    <string name="imagex">imagex</string>
    <string name="i_need_an_account_sign_up">i need an account Sign Up</string>
    <string name="google_maps">Google Maps</string>
    <string name="googlemap">googleMap</string>
    <string name="document_image">document_image</string>
</resources>