<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <EditText
            style="@style/modifiedEditText"
            android:inputType="text"
            android:maxLines="1"
            android:hint="Name"
            android:layout_marginTop="@dimen/signup_text_margin_top"/>

        <EditText
            style="@style/modifiedEditText"
            android:inputType="text"
            android:maxLines="1"
            android:hint="Mobile Number"
            android:layout_marginTop="@dimen/signup_text_margin_top"/>

        <EditText
            style="@style/modifiedEditText"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/login_email_hint"
            android:layout_marginTop="@dimen/signup_text_margin_top"/>

        <EditText
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/signup_text_margin_top"/>

        <Button
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Register" />


        <TextView
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>
</LinearLayout>