<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sky_blue_house"    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="196dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_shape" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:text="@string/login2"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:autofillHints="EmailAddress"
            android:ems="10"
            android:drawableEnd="@drawable/baseline_done_all_24"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:drawableEnd="@drawable/password_magic"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:background="@drawable/button_background"
            android:padding="20sp"
            android:text="Login"
            android:textColor="@color/skyBlue"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>